# capcut-api

./: .gitignore  README.md  agents.md  install-client.bat  pyproject.toml  requirements.txt  run.bat  run.ps1  start-client.bat  start.bat  stop-client.bat  stop.bat
admin/: index.html  login.html
client/: pyproject.toml
client/src/capcut_draft_client/: __init__.py  api.py  app.py  config.py  credentials.py  worker.py
client/src/capcut_draft_client/static/: index.html
common/: pyproject.toml
common/src/capcut_draft_core/: __init__.py  asr.py  builder.py  cutter.py
config/: client.example.yaml  workflows.builtin.json
deploy/: README.md  aliyun-client.sh  aliyun-server.sh  aliyun.sh  capcut-draft.service  restore_drill.sh
frontend/: index.html  login.html
inputs/: .gitkeep  README.md
scripts/: check_db.py  deploy.ps1
server/: pyproject.toml
server/src/capcut_draft_server/: __init__.py  audit.py  auth.py  db_models.py  log_json.py  web.py  web_admin.py  web_assets.py  web_clients.py  web_drafts.py  web_folders.py  web_tasks.py  web_uploads.py
server/src/capcut_draft_server/static/: 404.html  index.html
src/capcut_draft/: __init__.py  auth.py  builder.py  cli.py  db_models.py  models.py  web.py  web_clients.py
src/capcut_draft/client/: __init__.py  __main__.py  api.py  app.py  config.py  storage.py  worker.py
src/capcut_draft/client/static/: index.html
src/capcut_draft/static/: index.html  login.html
tests/: _auth_test.py  conftest.py  shoot.py  test_clients.py  test_core.py  test_drafts.py  test_tasks.py  test_wizard.py  ui_check.py  web_smoke.py  wf_api_check.py  workflow_check.py
