[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capcut-draft"
version = "0.2.0"
description = "即创数字人 + B-roll + ASR 字幕 → 剪映草稿（C/S 架构）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "小马" }]

# 基础 deps：服务端和客户端都得装
# 客户端机器不装 gunicorn / bcrypt / pyjwt / sqlalchemy（[client] 套件里另加 sqlalchemy 仅用于读 DB）
# 服务端机器不装 pyJianYingDraft / funasr / torch（虽然实际上也装，无所谓）
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "requests>=2.31",
    "pydub>=0.25",
    "numpy>=1.26",
    "imageio-ffmpeg>=0.5",
    "soundfile>=0.12",
    "pyJianYingDraft>=1.0",
    "funasr>=1.0",
    "modelscope>=1.9",
    "torch>=2.0",
    "rich>=13.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
# 服务端额外装 gunicorn + PG 驱动
server = [
    "gunicorn>=21.0",
    "psycopg2-binary>=2.9; platform_system != 'Windows'",
]
# 客户端纯净套件（只装基础 deps + 这一项，省空间）
# 实际客户端 pip install -e .[client] 即可
client = []
# 开发
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
# 服务端入口（管理员用）
capcut-server = "capcut_draft.web:app"
# 客户端入口（员工用，最常用）
capcut-client = "capcut_draft.client.__main__:main"
# 兼容旧 CLI
capcut-draft = "capcut_draft.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"capcut_draft" = ["static/*.html", "static/*/*.html", "client/static/*.html"]
"capcut_draft.client" = ["static/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"
